--- a/exampleLanding.html
+++ b/exampleLanding.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h2><a href="#">kamaz.V8</a></h2>
+        <h2><a href="#">WebYaskuts</a></h2>
         <nav>
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
