changed contacts link

--- a/exampleLanding.html
+++ b/exampleLanding.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <header>
-        <h2><a href="#">WebYaskuts</a></h2>
+        <h2><a href="#">ya$Web</a></h2>
         <nav>
-            <li><a href="#">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -30,7 +30,7 @@
         <div class="banner-img"></div>
         <h1>Web-developer</h1>
         <h3>Responsive Web Design</h3>
-        <a href="#" class="banner-btn">Contact us</a>
+        <a href="#contact" class="banner-btn">Contact us</a>
     </section>
 
     <section class="about-area" id="about">
@@ -40,7 +40,7 @@
             <li class="about-right">
                 <h2>About our Company</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam odio pariatur debitis inventore consequuntur numquam laborum odit mollitia at in?</p>
-                <a href="#" class="about-btn">Learn more</a>
+                <a href="#services" class="about-btn">Learn more</a>
             </li>
         </ul>
     </section>
@@ -75,18 +75,18 @@
             </li>
             <li>
                 <i class="fa fa-phone"></i>
-                <p>+375(29)603-97-33<br>+375(29)367-66-07</br></p>
+                <p><a href="tel:+375296039733">+375(29)603-97-33</a><br><a href="tel:+375293676607">+375(29)367-66-07</a></br></p>
             </li>
             <li>
                 <i class="fa fa-envelope"></i>
-                <p>kaptowka@mail.ru<br>pavel.yaskuts@gmail.com</p>
+                <p><a href="mailto:kaptowka@mail.ru">kaptowka@mail.ru</a><br><a href="mailto:pavel.yaskuts@gmail.com">pavel.yaskuts@gmail.com</a></p>
             </li>
         </ul>
     </section>
 
     <footer>
         <p>All Right Reserved by Your Website</p>
-        <p>Created by kamaz.V8</p>
+        <p>Created by YA$Web</p>
     </footer>
 </body>
 </html>
