--- a/exampleLanding.html
+++ b/exampleLanding.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a9c1882cb6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
